[package]
name = "lisk-db"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[dependencies.rocksdb]
version = "0.18"