[package]
name = "lisk-db"
version = "0.1.0"
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "bench_smt"
path = "benchmark/rust/bench_smt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sha2]
version = "0.10.2"

[dependencies.thiserror]
version = "1.0.0"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[dependencies.rocksdb]
version = "0.19"

[dependencies.hex]
version = "0.4.3"

[dependencies.tempdir]
version = "0.3"

[dependencies.bitvec]
version = "1.0.1"

[dev-dependencies.rand]
version = "0.8.5"

[dev-dependencies.criterion]
version = "0.4.0"

[profile.release-with-debug]
inherits = "release"
debug = true
